[package]
name = "playground"
version = "0.1.0"
authors = ["Luis Rodrigues <luis.rodrigues@luisnuxx.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_v8 = "0.4.2"
rocket = "0.4.4"
lazy_static = "1.4.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
clokwerk = "0.3.0"